# uart_miner

./: CMakeLists.txt  README.md  lite_test.json  ltc.json  uart_miner_conf.json  xmr.json
asm/: sha2-x64.S
config/btc/: cpu.json  cpu.test.json
config/dash/: cpu.json  cpu.test.json  uart.json  uart.test.json
config/lite/: cpu.json  cpu.test.json  uart.json
config/xmr/: cpu.json  cpu.test.json  uart.json  uart.test.json
crypto/: oaes_lib.c
src/: communication.c  communication.h  compat.h  cryptonight.c  miner-config.h  miner.h  scrypt.c  serial.c  serial.h  sha2.c  sysinfos.c  tty.c  uart-miner.c  uart-tester.c  uint256.cpp  util.c  x11.c  x11_tester.c
